--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 </div>
                 <h1 class="text-6xl font-black text-white tracking-tight drop-shadow-2xl fun-font">Faltu</h1>
                 <p class="text-slate-300 text-lg font-medium tracking-wide opacity-90">Chaos. Fun. No Logic.</p>
+                <p class="text-slate-300 text-lg font-medium tracking-wide opacity-90">Its friday bolo sararara😅.</p>
             </div>
 
             <div class="glass-panel p-8 rounded-[2.5rem] shadow-2xl ring-1 ring-white/10">
@@ -749,3 +750,4 @@
     </script>
 </body>
 </html>
+
