--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="relative group flex gap-3">
                             <div class="relative flex-1">
                                 <i data-lucide="user" class="absolute left-5 top-5 w-6 h-6 opacity-50 group-focus-within:opacity-100 group-focus-within:text-[var(--accent-2)] transition"></i>
-                                <input type="text" id="username-input" placeholder="Name" required maxlength="15"
+                                <input type="text" id="username-input" placeholder="Naam bata aapna " required maxlength="15"
                                     class="w-full pl-14 pr-6 py-5 rounded-3xl bg-black/20 border border-white/5 text-white focus:border-[var(--accent-2)] focus:bg-black/40 outline-none transition-all font-semibold placeholder-slate-500 text-xl shadow-inner" />
                             </div>
                             <button type="button" id="random-name-btn" class="bg-white/10 hover:bg-white/20 border border-white/5 p-5 rounded-3xl transition active:scale-95 flex-shrink-0" title="Random Name">
@@ -750,4 +750,5 @@
     </script>
 </body>
 </html>
+
 
